# blockchain-hpc-on-nix

./: Dockerfile  LICENSE  Makefile  README.md  compose.yml  config.toml  flake.nix  hardhat.config.ts  howto.md  package-lock.json  package.json  populate-cl.sh  secrets.toml
chainlink/: config.toml  password
chainnode/: node-api1.toml  populate-cl.sh
contracts/: HpcClient.sol  HpcExample.sol  HpcSample.sol  HpcToken.sol
hardhat-app/: compose.yml  database.env  hardhat.config.ts  package-lock.json
hardhat-app/chainlink/: api
hardhat-app/contracts/: HpcClient.sol  HpcOperator.sol
hardhat-app/modules/chainlink/: Dockerfile.multiarch  build.sh
hardhat-app/modules/executor/: start-local.sh
hardhat-app/modules/executor/tests/: test_hello.py
hardhat-app/modules/quantragrpc/: Dockerfile.multiarch  build.sh
hardhat-app/modules/rpc-failover/: Dockerfile.multiarch  build.sh
hardhat-app/scripts/: deploy-example.ts  deploy-operator.ts  deploy-token.ts
modules/executor/: Dockerfile  populate-cl.sh  pyproject.toml  start.sh
modules/executor/executor/: __init__.py
nix/: nixos-module.nix  nixos-test.nix  package.nix
scripts/: deploy-example.ts  initialize-testnet.sh  populate-cl.sh  reset-testnet.sh  reset.sh  run-example.ts  set-authorized-senders.ts
