[project]
name = "executor"
version = "0.0.1"
dependencies = [
    "eth_abi >= 3.0.1",
    "eth_utils",
    "uvicorn",
    "pytest",
    "cbor2",
    "requests",
    "fastapi",
    "httpx",
    "eth-hash[pycryptodome]"
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
addopts = [
    "--import-mode=importlib",
]
